# PlaidC

./: CMakeLists.txt  cstartup.c  gpio.c  gpio.h  plaid.c  plaidconfig.h.in  rpi2.ld  soc.h  start.S  toolchain-arm-none-eabi-rpi2.cmake  uart.c  uart.h
